--- a/Dissertation/5fitnessIoT.tex
+++ b/Dissertation/5fitnessIoT.tex
@@ -1,4 +1,4 @@
-% !TeX root = disseration.tex
+% !TeX root = dissertation.tex
 \chapter{Recommending Privacy Settings for Fitness IoT}\label{chapter:fitnessIoT}
 
 \section{Introduction}\label{fitnessIntro}
@@ -236,7 +236,7 @@ We describe the subprofiles of each set in the subsections below.
 	\item \textbf{Health-focused} (cluster 1): this subprofile does not allow sharing with any third parties. Sharing is allowed only for health and safety purposes. 
 \end{itemize}
 
-\section{Profile Prediction (original work)}
+\section{Profile Prediction (partial original work)}
 \label{sec:prediction}
 
 
@@ -502,7 +502,7 @@ Figure~\ref{fig:treermse} shows the root mean square error of all the trees prod
 
 As expected, the ``direct prediction'' approach results in lower error rates than the various ``indirect prediction'' approaches, since in the former approach the items are a direct part of the privacy settings that constitute the subprofiles. Among the ``indirect prediction'' approaches, the \textit{negotiability of privacy settings} has slightly lower error rates. This is not surprising, since it is at least partially related to the privacy settings (yet evaluates whether those settings will change under certain conditions). The prediction accuracies of each tree are reported on the branches in their respective figures (Figure~\ref{fig:tree1} to~\ref{fig:tree4}), and take the form of (\# assigned / \# incorrect). 
 
-\section{Privacy-setting Recommendations (original work)}
+\section{Privacy-setting Recommendations (partial original work)}
 In this section, we describe different types of guided privacy-setting approaches for fitness Iot users that are based on the previous clustering and machine learning results. 
 
 \subsection{Manual Setting}
