--- a/Dissertation/7conclusion.tex
+++ b/Dissertation/7conclusion.tex
@@ -1,6 +1,9 @@
-% !TeX root = disseration.tex
-\chapter{Expected Contribution}\label{chapter:conclusion}
-The already implemented contribution of my thesis are:
+% !TeX root = dissertation.tex
+\chapter{Conclusion}\label{chapter:conclusion}
+
+In this dissertation, we first present three studies on recommending privacy settings for different IoT environments, namely general/public IoT, household IoT, and fitness IoT, respectively. We developed and utilized a ``data-driven” approach in these three studies—We first use statistical analysis and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior, and then create a set of ``smart” privacy defaults/profiles based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click or by answering a few related questions. To address the limitation of these three studies, which is the lacks of the test to the proposed interfaces, we conducted a user study to evaluate the new interfaces of recommending privacy-settings for household IoT users The results shows that by using smart defaults and smart profile can significantly improve users' experience, including satisfaction with the system, trust to the company. Our research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
+
+The main contribution of my dissertation are:
 \begin{itemize}
 	\item Developed a data-driven approach to designing IoT privacy-setting interfaces for three different IoT environments, namely general IoT, household IoT, and fitness IoT.
 	\item Investigated the effect of IoT scenario parameters on IoT users' decisions and attitudes.
@@ -8,5 +11,6 @@ The already implemented contribution of my thesis are:
 	\item Created a series of strategies to recommend ``smart profiles" for fitness IoT users.
 \end{itemize}
 
-If my proposed study plan can be executed and my hypothesis about the expected results hold. I would suggest the designers of future IoT privacy-setting interface to make use of our data-driven approach and carefully consider the trade-off between ``smart defaults" and ``smart profiles". Again, if my hypothesis hold and the results show that ``smart profiles" will not decrease the ease of use significantly, then ``smart profiles" is the best route for designing future IoT privacy-setting interface.
+These research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
+I suggest the designers of future IoT privacy-setting interface to make use of our data-driven approach and carefully consider the trade-off between ``smart defaults" and ``smart profiles". ``smart profiles" and ``smart defaults" can be the viable route for designing future IoT privacy-setting interface.
 
