--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -9,97 +9,97 @@
 
 
 
-\begin{table}[h]
-\centering
-
-\caption{Study Questionnaire.}
-\label{tab:questionnaire}       
-
-\newcolumntype{P}[1]{>{\arraybackslash}p{#1}}
-\begin{tabular}{m{2cm}m{14cm}}
-\hline\noalign{\smallskip}
- & \multicolumn{1}{c}{Privacy-related attitude questions (7pt scale)} \\
-\noalign{\smallskip}\cmidrule(r){2-2}
-\noalign{\smallskip}
-
-\multirow{4}{*}{Trust}
-& I believe the company providing this fitness tracker is trustworthy in handling my information.\\
-& I believe this company tells the truth and fulfills promises related to the information I provide.\\
-& I believe this company is predictable and consistent regarding the usage of my information.\\
-& I believe this company is honest when it comes to using the information I provide.\\
-\cmidrule(r){2-2}
-
-\multirow{6}{2cm}{General privacy concerns}
-& All things considered, the Internet causes serious privacy problems.\\
-& Compared to others, I am more sensitive about the way online companies handle my personal information.\\
-& To me, it is the most important thing to keep my privacy intact from online companies.\\
-& I believe other people are too concerned with online privacy issues.\\
-& Compared with other subjects on my mind, personal privacy is very important.\\
-& I am concerned about threats to my personal privacy today. \\
-\cmidrule(r){2-2}
-
-\multirow{3}{2cm}{Perceived surveillance}
-& I believe that the location of my mobile device is monitored at least part of the time.\\
-& I am concerned that mobile apps are collecting too much information about me.\\
-& I am concerned that mobile apps may monitor my activities on my mobile device.\\
-\cmidrule(r){2-2}
-
-\multirow{3}{2cm}{Perceived intrusion}
-& I feel that as a result of my using mobile apps, others know about me more than I am comfortable with.\\
-& I believe that as a result of my using mobile apps, information about me that I consider private is now more readily available to others than I would want.\\
-& I feel that as a result of my using mobile apps, information about me is out there that, if used, will invade my privacy.\\
-
-\cmidrule(r){2-2}
-
-
-\multirow{3}{2cm}{Perceived secondary use of personal information}
-& I am concerned that mobile apps may use my personal information for other purposes without notifying me or getting my authorization.\\
-& When I give personal information to use mobile apps, I am concerned that apps may use my information for other purposes.\\
-& I am concerned that mobile apps may share my personal information with other entities without getting my authorization.\\
-\hline
-
- & \multicolumn{1}{c}{Negotiability of privacy settings questions (Y|N for each permission setting)} \\
- \cmidrule(r){2-2}
-& Would you share the following data if the risks significantly increased?\\
-& Would you share the following data if the benefits significantly decreased?\\
-& Would you share the following data if the risks significantly decreased?\\
-& Would you share the following data if the benefits significantly increased?\\
-\hline
-
- & \multicolumn{1}{c}{Social behaviour questions (7pt scale)} \\
-\cmidrule(r){2-2}
-\multirow{2}{2cm}{Social influence}
-& If your friends exercise, does this influence you to exercise?\\
-& If your social media friends exercise, does this influence you to exercise?\\
-\cmidrule(r){2-2}
-
-\multirow{2}{2cm}{Sociability}
-& How often do you meet new friends while you exercise?\\
-& Are you open to the idea of meeting new friends while you exercise?\\
-\hline
-
-& \multicolumn{1}{c}{Exercise tendencies questions (7pt scale; multiple choice for What questions)} \\
-\cmidrule(r){2-2}
-
-\multirow{7}{2cm}{Exercise attitude}
-& How physically healthy are you?\\
-& How important is exercise to you?\\
-& What do you most often do for exercise?\\
-& How often do you exercise?\\
-& At what intensity do you work out?\\
-& Do you feel you get too much, the right amount, or too little exercise?\\
-& What is the main reason you exercise?\\
-\cmidrule(r){2-2}
-
-\multirow{4}{2cm}{Healthy living expertise}
-& I understand difference between different types of healthy-living measures.\\
-& I know healthy-living measures that most others haven’t even heard of.\\
-& I know which healthy-living measures are useful to implement.\\
-& I am able to choose the right healthy-living measures.\\
-
-\noalign{\smallskip}\hline
-\end{tabular}
-\end{table}
+%\begin{table}[h]
+%\centering
+%
+%\caption{Study Questionnaire.}
+%\label{tab:questionnaire}       
+%
+%\newcolumntype{P}[1]{>{\arraybackslash}p{#1}}
+%\begin{tabular}{m{2cm}m{14cm}}
+%\hline\noalign{\smallskip}
+% & \multicolumn{1}{c}{Privacy-related attitude questions (7pt scale)} \\
+%\noalign{\smallskip}\cmidrule(r){2-2}
+%\noalign{\smallskip}
+%
+%\multirow{4}{*}{Trust}
+%& I believe the company providing this fitness tracker is trustworthy in handling my information.\\
+%& I believe this company tells the truth and fulfills promises related to the information I provide.\\
+%& I believe this company is predictable and consistent regarding the usage of my information.\\
+%& I believe this company is honest when it comes to using the information I provide.\\
+%\cmidrule(r){2-2}
+%
+%\multirow{6}{2cm}{General privacy concerns}
+%& All things considered, the Internet causes serious privacy problems.\\
+%& Compared to others, I am more sensitive about the way online companies handle my personal information.\\
+%& To me, it is the most important thing to keep my privacy intact from online companies.\\
+%& I believe other people are too concerned with online privacy issues.\\
+%& Compared with other subjects on my mind, personal privacy is very important.\\
+%& I am concerned about threats to my personal privacy today. \\
+%\cmidrule(r){2-2}
+%
+%\multirow{3}{2cm}{Perceived surveillance}
+%& I believe that the location of my mobile device is monitored at least part of the time.\\
+%& I am concerned that mobile apps are collecting too much information about me.\\
+%& I am concerned that mobile apps may monitor my activities on my mobile device.\\
+%\cmidrule(r){2-2}
+%
+%\multirow{3}{2cm}{Perceived intrusion}
+%& I feel that as a result of my using mobile apps, others know about me more than I am comfortable with.\\
+%& I believe that as a result of my using mobile apps, information about me that I consider private is now more readily available to others than I would want.\\
+%& I feel that as a result of my using mobile apps, information about me is out there that, if used, will invade my privacy.\\
+%
+%\cmidrule(r){2-2}
+%
+%
+%\multirow{3}{2cm}{Perceived secondary use of personal information}
+%& I am concerned that mobile apps may use my personal information for other purposes without notifying me or getting my authorization.\\
+%& When I give personal information to use mobile apps, I am concerned that apps may use my information for other purposes.\\
+%& I am concerned that mobile apps may share my personal information with other entities without getting my authorization.\\
+%\hline
+%
+% & \multicolumn{1}{c}{Negotiability of privacy settings questions (Y|N for each permission setting)} \\
+% \cmidrule(r){2-2}
+%& Would you share the following data if the risks significantly increased?\\
+%& Would you share the following data if the benefits significantly decreased?\\
+%& Would you share the following data if the risks significantly decreased?\\
+%& Would you share the following data if the benefits significantly increased?\\
+%\hline
+%
+% & \multicolumn{1}{c}{Social behaviour questions (7pt scale)} \\
+%\cmidrule(r){2-2}
+%\multirow{2}{2cm}{Social influence}
+%& If your friends exercise, does this influence you to exercise?\\
+%& If your social media friends exercise, does this influence you to exercise?\\
+%\cmidrule(r){2-2}
+%
+%\multirow{2}{2cm}{Sociability}
+%& How often do you meet new friends while you exercise?\\
+%& Are you open to the idea of meeting new friends while you exercise?\\
+%\hline
+%
+%& \multicolumn{1}{c}{Exercise tendencies questions (7pt scale; multiple choice for What questions)} \\
+%\cmidrule(r){2-2}
+%
+%\multirow{7}{2cm}{Exercise attitude}
+%& How physically healthy are you?\\
+%& How important is exercise to you?\\
+%& What do you most often do for exercise?\\
+%& How often do you exercise?\\
+%& At what intensity do you work out?\\
+%& Do you feel you get too much, the right amount, or too little exercise?\\
+%& What is the main reason you exercise?\\
+%\cmidrule(r){2-2}
+%
+%\multirow{4}{2cm}{Healthy living expertise}
+%& I understand difference between different types of healthy-living measures.\\
+%& I know healthy-living measures that most others haven’t even heard of.\\
+%& I know which healthy-living measures are useful to implement.\\
+%& I am able to choose the right healthy-living measures.\\
+%
+%\noalign{\smallskip}\hline
+%\end{tabular}
+%\end{table}
 
 
 
@@ -202,8 +202,19 @@ Over-all Average & 84.74 \% & 68.74 \% & 83.41 \% & 68.52 \% & 69.70 \% & 73.11 
 \end{tabular}
 \end{table*}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{figures/yangAttentionCheck.png}
+	\caption{Attention Check Question of Evaluating privacy-setting UI for Household IoT}
+	\label{fig:yangAttentionCheck}
+\end{figure}
 
-
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{figures/yangPrepage.png}
+	\caption{Instructions on how to use the UIs}
+	\label{fig:yangPrepage}
+\end{figure}
 
 
 %ALL THE TREE VALIDATION
@@ -300,5 +311,240 @@ Over-all Average & 84.74 \% & 68.74 \% & 83.41 \% & 68.52 \% & 69.70 \% & 73.11 
 % \caption{Negotiability Trees.}
 % \label{fig:tree4appendix}
 % \end{figure*}
+
+Figure~\ref{fig:ui1AllOff} shows the experimental condition --- UI1:Everything-Off.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOff1.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOff2.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff3.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOff4.png}
+	\end{subfigure}%
+	\caption{User Interface 1 with all settings turned off}
+	\label{fig:ui1AllOff}
+\end{figure}
+
+Figure~\ref{fig:ui2AllOff} shows the experimental condition --- UI2:Everything-Off.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff1.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOffLocal.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff2.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff3.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff4.png}
+	\end{subfigure}%
+	\caption{User Interface 2 with all settings turned off}
+	\label{fig:ui2AllOff}
+\end{figure}
+
+Figure~\ref{fig:ui1AllOn} shows the experimental condition --- UI1:Everything-On.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOff1.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOff2.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOn3.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1allOn4.png}
+	\end{subfigure}%
+	\caption{User Interface 1 with all settings turned on}
+	\label{fig:ui1AllOn}
+\end{figure}
+
+Figure~\ref{fig:ui2AllOn} shows the experimental condition --- UI2:Everything-On.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.19\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff1.png}
+	\end{subfigure}%
+	~~~~~~
+	\begin{subfigure}[t]{0.19\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOffLocal.png}
+	\end{subfigure}%
+	~~~~~~
+	\begin{subfigure}[t]{0.19\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOff2.png}
+	\end{subfigure}%
+	~~~~~~
+	\begin{subfigure}[t]{0.19\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOn3.png}
+	\end{subfigure}%
+	~~~~~~
+	\begin{subfigure}[t]{0.19\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2allOn4.png}
+	\end{subfigure}%
+	\caption{User Interface 2 with all settings turned on}
+	\label{fig:ui2AllOn}
+\end{figure}
+
+Figure~\ref{fig:ui1OneR} shows the experimental condition --- UI1:Smart Default.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sd1.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sd2.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sd3.png}
+	\end{subfigure}%
+	~
+	\begin{subfigure}[t]{0.24\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sd4.png}
+	\end{subfigure}%
+	\caption{User Interface 1 with Smart Default}
+	\label{fig:ui1OneR}
+\end{figure}
+
+Figure~\ref{fig:ui2SD} shows the experimental condition --- UI2:Smart Default.
+\begin{figure}
+	\centering
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sd1.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sd2.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sd3.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sd4.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sd5.png}
+	\end{subfigure}%
+	\caption{User Interface 2 with Smart Default}
+	\label{fig:ui2SD}
+\end{figure}
+
+Figure~\ref{fig:ui1Profiles} shows the experimental condition --- UI1:Smart Profiles.
+\begin{figure}[htb]
+	\centering
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp1.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp2.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp3.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp4.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp5.png}
+	\end{subfigure}%
+	\caption{User Interface 1 with Smart Profiles}
+	\label{fig:ui1Profiles}
+\end{figure}
+
+Figure~\ref{fig:ui2Profiles} shows the experimental condition --- UI2:Smart Profiles.
+\begin{figure}[htb]
+	\centering
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sp1.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sp2.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui1sp3.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sp4.png}
+	\end{subfigure}%
+	~~~~~
+	\begin{subfigure}[t]{0.2\textwidth}
+		\centering
+		\includegraphics[height=2.8in]{figures/ui2sp5.png}
+	\end{subfigure}%
+	\caption{User Interface 2 with Smart Profiles}
+	\label{fig:ui2Profiles}
+\end{figure}
+
+
 
 \end{appendices}
