--- a/Dissertation/dissertation.tex
+++ b/Dissertation/dissertation.tex
@@ -29,6 +29,7 @@
 \usepackage{arydshln}
 \usepackage{ntheorem}
 \newtheorem{theorem}{Hypothesis}
+\usepackage[normalem]{ulem}
 
 \usepackage{chngcntr}
 \newcounter{pretheorem}
